# sgproxy

./: .gitignore  Cargo.toml  README.en.md  README.md
.github/: FUNDING.yml
src/: admin.rs  config.rs  do_state.rs  main.rs  oauth.rs  persist.rs  proxy.rs  state.rs
src/web/: index.html
